Add AlertsService floodAlert() unit tests